<resources>
    <string name="app_name">Test Google Sign In Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign out</string>
    <string name="go_back">Go back</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="welcome">WELCOME</string>
    <string name="token">token</string>
    <string name="id">id</string>
    <string name="expired">expired</string>
    <string name="accounttype">accountType</string>
    <string name="serverAuthType">serverAuthType</string>
    <string name="photourl">photoUrl</string>
</resources>